add html markup for "Pricing"

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,9 @@
 @import "variables";
 @import "mixins";
 
+.wrapper {
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
