--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -13,3 +13,31 @@
   display: flex;
   flex-direction: column;
 }
+
+
+//section "Here is what you get"
+@mixin flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+@mixin flex-blocks {
+  display: flex;
+  justify-content: space-between;
+  //align-items: center;
+}
+
+@mixin text-font-montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+@mixin text-flex-center {
+  display: flex;
+  align-items: center;
+}
+@mixin text-font-lato {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
