--- a/src/scss/pricing-section.scss
+++ b/src/scss/pricing-section.scss
@@ -29,7 +29,7 @@
     font-weight: 700;
     font-size: 3rem;
     line-height: 3.125rem;
-    color: #ffffff;
+    color: $clear-white;
 
     @media screen and (max-width: 480px) {
       font-size: 2.75rem;
@@ -58,8 +58,8 @@
       text-align: center;
       width: 23%;
       height: 460px;
-      color: #ffffff;
-      background-color: rgba(255, 255, 255, 0.11);
+      color: $clear-white;
+      background-color: #{$clear-white+'1c'};
 
       @media screen and (max-width: 992px) {
         width: 44%;
@@ -75,7 +75,7 @@
         font-size: 1.5rem;
         line-height: 1.5rem;
         text-transform: uppercase;
-        background-color: rgba(255, 255, 255, 0.06);
+        background-color: #{$clear-white+'0f'};
 
         @media screen and (max-width: 992px) {
           font-size: 1.4rem;
@@ -102,7 +102,7 @@
           content: "";
           display: block;
           margin: 30px auto 0;
-          background-color: #8d81ac;
+          background-color: $primary-color;
           width: 60px;
           height: 5px;
         }
@@ -126,8 +126,8 @@
           line-height: 1.125rem;
           text-decoration: none;
           text-transform: uppercase;
-          color: #ffffff;
-          background-color: rgba(255, 255, 255, 0.15);
+          color: $clear-white;
+          background-color: #{$clear-white+'26'};
           border-radius: 2.25rem;
           max-width: 94%;
         }
@@ -136,7 +136,7 @@
       &:nth-child(3) {
         width: 28%;
         height: 560px;
-        background-color: rgba(70, 48, 72, 0.84);
+        background-color: #{$bg-primary-color+'d6'};
 
         @media screen and (max-width: 992px) {
           width: 52%;
@@ -147,7 +147,7 @@
         }
 
         .item-title {
-          background-color: rgba(0, 0, 0, 0.11);
+          background-color: #{$total-black+'1c'};
         }
       }
     }
