created html structure for "People are talking" and added favicon

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "features-section";
 @import "presentation-section";
 @import "pricing-section";
+@import "talking-about";
 
 // Common styles
 body {
