added styles for "People are talking" section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -23,6 +23,7 @@ $total-black: #000000;
 $bg-primary-color: #463048;
 $bg-lightgray: #F4F4F4;
 $bg-darkgray: #27262A;
+$medium-shape-magenta: #A291A5;
 
 
 
