--- a/src/scss/_talking-about.scss
+++ b/src/scss/_talking-about.scss
@@ -1,8 +1,206 @@
 @import "mixins";
 @import "variables";
 
-
 .main-talking-about {
+  background-color: #4b3b4e;
   background-image: url("img/talking-about-bg.png");
   background-repeat: no-repeat;
+  background-size: auto 840px;
+  background-position: top center;
+  padding-bottom: 10px;
+
+  &__container {
+    margin: 0 auto;
+    padding: 0 10px;
+    max-width: 1220px;
+  }
+
+  &__title {
+    padding-top: 48px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 48px;
+    color: $clear-white;
+    text-align: center;
+  }
+
+  &__card {
+    margin-top: 45px;
+    text-align: center;
+  }
+  &__card:nth-child(2) {
+    margin-top: 39px;
+  }
+  &__card:nth-child(2) .main-talking-about__card-text {
+    margin-top: 22px;
+  }
+  &__card:nth-child(3) {
+    margin-top: 38px;
+  }
+  &__card:nth-child(3) .main-talking-about__card-text {
+    margin-top: 18px;
+    padding: 0 20px;
+  }
+  &__card:nth-child(4) {
+    margin-top: 39px;
+  }
+  &__card:nth-child(4) .main-talking-about__card-text {
+    margin-top: 28px;
+  }
+  &__card:nth-child(5) {
+    margin-top: 40px;
+  }
+  &__card:nth-child(5) .main-talking-about__card-text {
+    margin-top: 36px;
+    padding: 0 5px;
+  }
+  &__card:nth-child(6) {
+    margin-top: 50px;
+  }
+  &__card:nth-child(6) .main-talking-about__card-text {
+    margin-top: 16px;
+    padding: 0 20px;
+  }
+
+  &__card-img {
+  }
+
+  &__card-text {
+    margin-top: 28px;
+    padding: 0 10px;
+    font-family: 'Lato', sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: $clear-white;
+  }
+
+  &__subtext {
+    padding: 0 25px;
+    margin: 32px 0 22px 0;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    color: $medium-shape-magenta;
+  }
+
+  &__line {
+    margin: 0 auto;
+    height: 2px;
+    width: calc(100vw - 25%);
+    background-color: #645766;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .main-talking-about {
+    padding-bottom: 31px;
+    &__title {
+      padding: 86px 0 37px 0;
+      font-size: 42px;
+      line-height: 44px;
+    }
+
+    &__card-text br{
+      display: none;
+    }
+
+    &__cards {
+      @include flex-between;
+      flex-wrap: wrap;
+    }
+
+    &__card {
+      max-width: 46%;
+    }
+    &__card:nth-child(n) {
+      padding: 0;
+      margin-top: 45px;
+    }
+    &__card:nth-child(3) {
+      margin-top: 54px;
+    }
+    &__card:nth-child(4) {
+      margin-top: 82px;
+    }
+    &__card:nth-child(5) {
+      margin-top: 59px;
+    }
+    &__card:nth-child(6) {
+      max-width: 45%;
+      margin-top: 52px;
+    }
+    &__card:nth-child(n) .main-talking-about__card-text {
+      margin-top: 24px;
+      padding: 0;
+    }
+    &__card:nth-child(1) .main-talking-about__card-text {
+      margin-top: 31px;
+    }
+    &__card:nth-child(3) .main-talking-about__card-text {
+      margin-top: 15px;
+    }
+    &__card:nth-child(4) .main-talking-about__card-text {
+      margin-top: 27px;
+    }
+    &__card:nth-child(5) .main-talking-about__card-text {
+      margin-top: 15px;
+    }
+    &__card:nth-child(6) .main-talking-about__card-text {
+      margin-top: 23px;
+    }
+    &__subtext {
+      padding: 0 25px;
+      margin: 60px 0 15px 0;
+    }
+    &__line {
+      width: calc(100vw - 23.5%);
+    }
+  }
+}
+
+@media screen and (min-width: 993px) {
+  .main-talking-about {
+    background-size: cover;
+    padding-bottom: 31px;
+
+    &__title {
+      padding: 105px 0 37px 0;
+      font-size: 48px;
+      line-height: 50px;
+    }
+    &__card {
+      max-width: 345px;
+    }
+    &__card:nth-child(n) {
+      max-width: 29%;
+      margin-top: 45px;
+      padding: 0;
+    }
+    &__card:nth-child(3) {
+      margin-top: 36px;
+    }
+    &__card:nth-child(4) {
+      margin-top: 110px;
+    }
+    &__card:nth-child(5) {
+      margin-top: 105px;
+    }
+    &__card:nth-child(6) {
+      max-width: 28%;
+      margin-top: 104px;
+    }
+    &__card:nth-child(5) .main-talking-about__card-text {
+      margin-top: 22px;
+    }
+    &__subtext {
+      padding: 0 150px;
+      margin: 111px auto 15px auto;
+    }
+    &__line {
+      width: 780px;
+    }
+  }
 }
