--- a/src/scss/_talking-about.scss
+++ b/src/scss/_talking-about.scss
@@ -3,7 +3,7 @@
 
 .main-talking-about {
   background-color: #4b3b4e;
-  background-image: url("img/talking-about-bg.png");
+  background-image: url("../img/talking-about-bg.png");
   background-repeat: no-repeat;
   background-size: cover ; // changed 'auto 840px' to 'cover'
   background-position: bottom center; // changed 'top' to 'bottom'
