--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,4 +26,11 @@ $bg-darkgray: #27262A;
 $medium-shape-magenta: #A291A5;
 
 
+//
+$color-btn-text: #24292f;
+$color-btn-bg: #f6f8fa;
+$color-btn-bg-hover: #dcdada;
+$color-btn-border:rgba(27,31,36,0.15);
+$color-btn-shadow: 0 1px 0 rgba(27,31,36,0.04);
+$color-btn-inset-shadow: inset 0 1px 0 rgba(255,255,255,0.25);
 
