--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,7 +26,7 @@ $bg-darkgray: #27262A;
 $medium-shape-magenta: #A291A5;
 
 
-//
+// Github btn's
 $color-btn-text: #24292f;
 $color-btn-bg: #f6f8fa;
 $color-btn-bg-hover: #dcdada;
