--- a/src/scss/pricing-section.scss
+++ b/src/scss/pricing-section.scss
@@ -13,7 +13,8 @@
     @include flex-column;
     align-items: stretch;
     gap: 60px;
-    margin: 114px auto 74px;
+    margin: 80px auto 74px;
+    max-width: 90%;
 
     @media screen and (max-width: 992px) {
       max-width: 92%;
