--- a/src/scss/features-section.scss
+++ b/src/scss/features-section.scss
@@ -10,17 +10,17 @@
 
 
 .features {
-  background-color: variables.$bg-color-features-section;
-  @include mixins.text-font-montserrat;
+  background-color: variables.$bg-lightgray;
+  @include mixins.text-font-normal;
   position: relative;
 
   &__wrap {
     margin-top: 98px;
-    @include mixins.flex;
+    @include mixins.flex-around;
   }
 
   &__left-side {
-    @include mixins.flex-blocks;
+    @include mixins.flex-between;
     width: 48%;
     padding: 0 10px;
 
@@ -42,18 +42,6 @@
     }
 
   }
-  //&__card:first-child .photo {
-  //  margin-right: 23px;
-  //}
-  //&__card:nth-child(2) .photo {
-  //  margin-right: 34px;
-  //}
-  //&__card:nth-child(3) .photo {
-  //  margin-right: 36px;
-  //}
-  //&__card:nth-child(4) .photo {
-  //  margin-right: 36px;
-  //}
 
   &__text-blocks {
     margin-bottom: 34px;
@@ -64,21 +52,21 @@
   }
 
   &__text-blocks-header {
-    @include mixins.text-font-montserrat;
+    @include mixins.text-font-normal;
     font-size: 16px;
     line-height: 21px;
     @include mixins.text-flex-center;
-    color: variables.$title-text-color-features-section;
+    color: variables.$text-secondary-color;
     margin-bottom: 16px;
     text-align: center;
   }
 
   &__text-blocks-paragraph {
-    @include mixins.text-font-montserrat;
+    @include mixins.text-font-normal;
     font-size: 14px;
     line-height: 21px;
     @include mixins.text-flex-center;
-    color: variables.$text-color-features-section;
+    color: variables.$text-primary-color;
   }
 
   #features-photo {
@@ -88,11 +76,11 @@
   }
 
   &__header {
-    @include mixins.text-font-montserrat;
+    @include mixins.text-font-normal;
     font-weight: 700;
     font-size: 44px;
     line-height: 50px;
-    color: variables.$header-color-features-section-btn;
+    color: variables.$primary-color;
     width: 48%;
     margin-bottom: 18px;
     text-align: center;
@@ -103,7 +91,7 @@
   .features {
     &__wrap {
       margin-top: 98px;
-      @include mixins.flex;
+      @include mixins.flex-around;
     }
   }
 
@@ -162,7 +150,6 @@
     }
     &__header {
       order: 1;
-      //padding: 0 10px;
       @include mixins.flex-center;
       margin-bottom: 36px;
       width: 100%;
