--- a/src/scss/presentation-section.scss
+++ b/src/scss/presentation-section.scss
@@ -27,36 +27,35 @@
 
     width: 390px;
     height: 62px;
-    background: variables.$header-color-features-section-btn;
+    background: variables.$primary-color;
     border-radius: 40px;
     transition-duration: 0.3s;
 
-   @include mixins.text-font-montserrat;
+   @include mixins.text-font-normal;
     font-weight: 700;
     font-size: 21px;
     line-height: 22px;
     @include mixins.flex-center;
     text-align: center;
-    color: variables.$white-color;
+    color: variables.$clear-white;
     cursor: pointer;
 
   }
 
   .text-after-btn {
-    @include mixins.text-font-montserrat;
+    @include mixins.text-font-normal;
     font-size: 14px;
     line-height: 15px;
     @include mixins.flex-center;
     text-align: center;
-    color: variables.$text-color-features-section;
+    color: variables.$text-primary-color;
     margin-top: 48px;
   }
 
   .btn-download:hover {
-    background: variables.$white-color;
-    border: 1px solid variables.$header-color-features-section-btn;
-    //border-radius: 40px;
-    color: variables.$header-color-features-section-btn;
+    background: variables.$clear-white;
+    border: 1px solid variables.$primary-color;
+    color: variables.$primary-color;
   }
   .btn-download:active{
     box-shadow: 0 0 10px variables.$hdr-nav-txt-color;
@@ -66,14 +65,14 @@
 
 
   &__header {
-    @include mixins.text-font-montserrat;
+    @include mixins.text-font-normal;
     font-weight: 700;
     font-size: 54px;
     line-height: 54px;
     @include mixins.flex-center;
     text-align: center;
     text-transform: uppercase;
-    color: variables.$header-present-section;
+    color: variables.$title-secondary-color;
     margin-bottom: 35px;
     margin-top: 66px;
   }
@@ -83,7 +82,7 @@
     line-height: 32px;
     @include mixins.flex-center;
     text-align: center;
-    color: variables.$title-text-color-features-section;
+    color: variables.$text-secondary-color;
     margin-bottom: 13px;
   }
 
