--- a/src/scss/features-section.scss
+++ b/src/scss/features-section.scss
@@ -102,6 +102,7 @@
 
 @media screen and (max-width: 993px) {
   .features {
+    overflow: hidden;
     &__wrap {
       display: flex;
       flex-flow: column nowrap;
