--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,9 +9,12 @@
 
 // Common styles
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
-  scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
